--- a/src/components/DataTable/components/TableFooter/TableFooter.module.css
+++ b/src/components/DataTable/components/TableFooter/TableFooter.module.css
@@ -45,3 +45,8 @@
   color: #6c757d;
   font-weight: 500;
 }
+
+.moreIndicator {
+  color: #0d6efd;
+  font-weight: 600;
+}
